--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     </script>
     <footer>
     P.s. лучше ничего конечно не дарить, потому что я и так счастлива за то что вы у меня есть, и все эти материальные мелочи не так важны, ваше внимание и любовь намного дороже, спасибо что вы у меня есть💞<br>
-    P.s.s. в сайте встроен рандомайзер поэтому некоторые картинки повторяються по несколько раз😊
+    P.s.s. в сайте встроен рандомайзер поэтому картинки повторяються по несколько раз😊
 </footer></body>
 </html>
